Run code formatting.

--- a/SOFIMA Stitching.ipynb
+++ b/SOFIMA Stitching.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "8c73ca9e-48bd-4a4c-bcc6-24bffe3a47c9",
    "metadata": {},
    "outputs": [
@@ -97,7 +97,9 @@
       "stitch_ealastic.compute_flow_map done.\n",
       "clean flow done.\n",
       "reoncile flows done.\n",
-      "aggregate arrays done.\n"
+      "aggregate arrays done.\n",
+      "relax mesh done.\n",
+      "518.7119042873383\n"
      ]
     }
    ],
